[GHO-7][GHO-173] Fix some styling issues (overlaps mostly) with the social icons and appeal tags

--- a/html/themes/custom/common_design_subtheme/components/gho-appeals-tags/gho-appeals-tags.css
+++ b/html/themes/custom/common_design_subtheme/components/gho-appeals-tags/gho-appeals-tags.css
@@ -2,29 +2,28 @@
  * Base component styles for the collection of tags
  */
 .gho-appeals-tags {
-  display: flex;
-  flex-flow: row nowrap;
-  margin: 1rem -0.25rem;
+  display: inline-block;
+  /* This combined with the line-height, ensures proper vertical alignement. */
+  vertical-align: top;
+  line-height: 1rem;
 }
 
 /**
  * Individual tag
  */
 .gho-appeals-tag {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0 0 auto;
+  display: inline-block;
   width: 2.5rem;
-  height: 1rem;
-  margin: 0 .25rem;
+  margin: 0.25rem;
   background: #5090cd;
   color: #fff;
-  font-size: .625em;
+  font-size: .625rem;
   font-weight: 700;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.05rem;
+  line-height: 0.9375rem; /* 1.5 of font-size */
   text-align: center;
   text-transform: uppercase;
+  vertical-align: top;
 }
 
 .gho-appeals-tag--hrp {
